[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tstamp-utils"
version = "0.0.1"
description = "A simple utility to print current timestamps"
readme = "README.md"
authors = [
  { name = "Dhaval Sathawara", email = "dhaval.sathawara1988@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/Dhaval-Sathawara/tstamp-utils.git"
"Bug Tracker" = "https://github.com/Dhaval-Sathawara/tstamp-utils.git/issues"